--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,47 @@
 /* MENU DE NAVEGACIÓN */
 
 .main-menu{
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
+    height: 80px;
+    justify-content: flex-end;
 }
 .main-menu li{
     list-style: none;
 }
 .main-menu li a{
     text-decoration: none;
-    color: yellow;
+    color: rgb(36, 36, 35);
     display: block;
+    padding: 0.5em;
+}
+.main-text{
+    background: linear-gradient(rgba(0, 0, 0, 0.465),rgba(0, 0, 0, 0.507)), url(../img/montaña.jpg);
+    height: 400px;
+    background-size: cover;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 5em;
+}
+
+.main-text-p{
+    font-size: 14px;
+}
+.main-text-title{
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+
+
+@media screen and (min-width:800px){
+    .main-text{
+        height: 600px;
+    }
+    .main-text-title{
+        color: white;
+    }
 }
