--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
 }
 
 body{
-    min-height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.main-nav{
     display: flex;
-    flex-direction: column;
-    font-size: 12px;
-}
-
-#header{
-    background-color: cadetblue;
-}
-#main{
-    background-color: rgb(255, 255, 255);
-    flex-grow: 1;
-}
-#footer{
-    background-color: cadetblue;
-    height: 100px;
-}
-
-
-
-.nav-main{
-    display: flex;
-    flex-direction: row-reverse;
     justify-content: space-between;
-    background-color: rgba(29, 42, 73, 0.859);
-    padding: 1em 1.5em;
-    position: relative;
+    background-color: rgba(134, 182, 244, 0.43);
+    padding: 1em 1em;
     align-items: center;
+    border-bottom: 2px solid rgb(44, 110, 208);
 }
 .main-logo{
     font-size: 1.5em;
-    color: rgb(171, 223, 31);
-    font-weight: bolder;
+    color: rgb(23, 119, 171);
+    font-weight: bold;
 }
 .main-menu{
-    position: absolute;
-    top: 100%;
-    left: -300px;
-    width: 300px;
-    background-color: rgba(116, 205, 37, 0.801);
+    display: flex;
 }
 .main-menu li{
     list-style: none;
@@ -55,58 +33,85 @@ body{
 .main-menu li a{
     text-decoration: none;
     display: block;
-    padding: 0.5em;
-    color: rgb(53, 22, 131);
-    border-bottom: 1px solid grey;
+    color: rgb(136, 136, 136);
+    padding: 0 0.7em;
 }
-.main-menu li i{
-    padding-right: 0.4em;
+.main-menu li a:hover{
+    color: black;
 }
-.main-menu a:hover{
-    background-color: rgb(80, 119, 55);
-    color: rgb(249, 249, 249);
+.main-menu li a i{
+    color: cornflowerblue;
+    margin-right: 0.35em;
 }
-#check{
-    display: none;
-}
-#check-icon{
-    cursor: pointer;
-}
-#check-icon2{
+
+#main-check{
     display: none;
     cursor: pointer;
 }
-#check-icon,#check-icon2{
-    cursor: pointer;
-    font-size: 1.3em;
-    color: rgb(171, 223, 31);
-}
-
-#check:checked ~ .main-menu{
-    display: block;
-    left: 0;
-    transition: all 0.5s;
-}
-#check:checked ~ #check-icon{
+#main-check-open{
     display: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: rgb(40, 63, 239);
 }
-#check:checked ~ #check-icon2{
-    display: block;
+#main-check-close{
+    display: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: red;
 }
 
-
-
-.main-banner{
-    background-color: rgb(159, 43, 0);
-    height: 20em;
-}
-
-
-@media screen and (min-width:600px){
-    .nav-main{
-        background-color: chocolate;
+@media screen and (max-width:800px) {
+    .main-nav{
+        flex-direction: row-reverse;
+        position: relative;
     }
-    body{
-        font-size: 14px;
+    .main-menu{
+        width: 80%;
+        background-color: cornflowerblue;
+        position: absolute;
+        top: 100%;
+        left: -80%;
+        display: block;
     }
+    .main-menu li a{
+        padding: 0;
+        padding: 1em 0.5em;
+        color: white;
+    }
+    .main-menu li a i{
+        color: white;
+    }
+    .main-menu li a:hover{
+        background-color: rgb(61, 78, 184);
+        color: white;
+    }
+
+
+
+
+
+    #main-check-open{
+        display: block;
+    }
+
+
+    #main-check:checked ~ .main-menu{
+        left: 0;
+        transition: all 0.5s;
+    }
+    #main-check:not(:checked) ~ .main-menu{
+        left: -80%;
+        transition: all 0.5s;
+    }
+
+    #main-check:checked ~ #main-check-close{
+        display: block;
+    }
+    #main-check:checked ~ #main-check-open{
+        display: none;
+    }
+
+
+
 }
