--- a/css/style.css
+++ b/css/style.css
@@ -1,180 +1,63 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* font-family: 'Poppins', sans-serif; */
+/* font-family: 'Roboto', sans-serif; */
 
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
     font-family: Arial, Helvetica, sans-serif;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+body, html{
+    height: 100vh;
+}
+
+header{
     min-height: 100vh;
+    background-color: aliceblue;
+}
+nav{
     display: flex;
-    flex-direction: column;
-}
-
-
-#header{
-    background-color: rebeccapurple;
-}
-#main{
-    background-color: rgb(254, 254, 254);
-    flex-grow: 1;
-}
-#footer{
-    background-color: rgb(64, 134, 253);
-    height: 100px;
-}
-
-
-/********** MENU DE NAVEGACION **********/
-
-.header__main-nav{
-    background-color: rgb(255, 255, 255);
-    height: 100px;
-    display: flex;
-    padding: 1em 2em;
-    align-items: center;
     justify-content: space-between;
+    height: 100px;
+    align-items: center;
+    padding: 0 2em;
 }
-.header__main-menu{
+
+.main-menu{
     display: flex;
 }
-.header__main-menu li{
+.main-menu li{
     list-style: none;
+    margin: 0 5px;
 }
-.header__main-menu li a{
+.main-menu li a{
     text-decoration: none;
-    margin-right: 10px;
     color: black;
-    font-size: 0.9em;
 }
-
-#header__main-check{
-    display: none;
-}
-#header__main-check--open{
-    display: none;
-}
-#header__main-check--close{
-    display: none;
-}
-
-
-/* BANNER PRINCIPAL */
 
 
 .banner{
-    height: 400px;
-    background-image: url(../img/fondo-banner2.jpg);
-    background-size: cover;
-    background-position: center;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2em;
+    width: 80%;
+    margin: auto;
+}
+.banner h1{
+    font-size: 3em;
+    text-transform: uppercase;
+}
+.banner p{
+    font-size: 0.9em;
+    margin: 1em 0 3em 0;
+}
 
+.button-menu{
+    background-color: black;
     color: white;
-}
-
-.banner__main-title{
-    font-size: 2.5em;
-    color: rgb(231, 231, 231);
-    padding-bottom: 10px;
-}
-
-
-/* GALERÍA PRINCIPAL */
-
-.gallery{
-    padding: 1em;
-    text-align: center;
-}
-.gallery__main-title{
-    padding-bottom: 0.5em;
-    font-weight: 600;
-    display: block;
-    font-size: 1.1em;
-}
-.gallery p{
-    font-size: 0.88em;
-    padding-bottom: 1em;
-}
-.gallery__main-container{
-    width: 100%;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto auto;
-    grid-gap: 10px;
-    padding: 10px;
-
-}
-.gallery__main-container img{
-    width: 100%;
-    height: 100%;
-    border: 3px solid rgb(255, 255, 255);
-    box-shadow: 0px 0px 3px 3px rgba(186,186,186,1);
-    object-fit: cover;
-
-}
-
-
-
-
-
-@media screen and (max-width:768px) {
-    body{
-        font-size: 14px;
-    }
-    
-        /********** MENU DE NAVEGACION **********/
-
-    .header__main-nav{
-        position: relative;
-    }
-    .header__main-menu{
-        background-color: beige;
-        
-        position: absolute;
-        top: 100%;
-        left: -85%;
-        width: 85%;
-        flex-direction: column;
-    }
-    .header__main-menu li{
-        list-style: none;
-        margin: 1em;
-    }
-    .header__main-menu li a{
-        text-decoration: none;
-        margin-right: 10px;
-        color: black;
-        font-size: 0.9em;
-    }
-
-    #header__main-check{
-        display: none;
-    }
-    #header__main-check--open{
-        display: block;
-    }
-    #header__main-check--close{
-        display: none;
-    }
-
-    #header__main-check:checked ~ .header__main-menu{
-        left: 0;
-        transition: all 0.5s;
-    }
-
-
-
-
-    .gallery__main-container{
-        grid-template-columns: repeat(1,1fr);
-    }
+    padding: 0.5em 2em;
+    border-radius: 15px;
+    outline: none;
+    border: none;
 }
