--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-/* font-family: 'Poppins', sans-serif; */
-/* font-family: 'Roboto', sans-serif; */
-
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-family: 'Poppins', sans-serif;
 }
 
-body, html{
-    height: 100%;
+body{
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 
 header{
-    min-height: 100vh;
-    background-color: aliceblue;
-}
-nav{
     display: flex;
-    justify-content: space-between;
-    height: 100px;
     align-items: center;
-    padding: 0 2em;
+    background-color: #2A73C7;
+    height: 100px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 1em 2em;
 }
 
 .main-menu{
@@ -36,28 +29,31 @@ nav{
 }
 .main-menu li a{
     text-decoration: none;
-    color: black;
 }
 
+@media screen and (max-width:800px){
+    header{
+        
+        position: relative;
+    }
 
-.banner{
-    width: 80%;
-    margin: auto;
-}
-.banner h1{
-    font-size: 2em;
-    text-transform: uppercase;
-}
-.banner p{
-    font-size: 0.9em;
-    margin: 1em 0 3em 0;
-}
+    .main-menu{
+        flex-direction: column;
+        justify-content: flex-start;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #2E2D2E;
+        width: 70%;
+        height: calc(100vh - 100px);
+        padding: 2em;
+    }
 
-.button-menu{
-    background-color: black;
-    color: white;
-    padding: 0.5em 2em;
-    border-radius: 15px;
-    outline: none;
-    border: none;
+    .main-menu li{
+        padding: 1em;
+
+    }
+    .main-menu li a{
+        color: #0e71ce;
+    }
 }
