--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ header{
 
 @media screen and (max-width:800px){
     header{
-        background-color: cadetblue;
+        background-color: rgb(149, 179, 41);
         position: relative;
     }
 
@@ -45,7 +45,7 @@ header{
         left: 0;
         background-color: #2E2D2E;
         width: 70%;
-        height: auto;
+        height: 100%;
         overflow: hidden;
     }
 
