--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body{
-    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -14,7 +13,7 @@ header{
     display: flex;
     align-items: end;
     background-color: #2A73C7;
-    height: 100vh;
+    max-height: 100vh;
 }
 
 .main-menu{
