--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
 }
 
 
@@ -13,7 +14,7 @@ header{
     display: flex;
     align-items: end;
     background-color: #2A73C7;
-    max-height: 100vh;
+    height: 100%;
 }
 
 .main-menu{
