--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,19 @@
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
 body{
+    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    min-height: 100vh;
 }
 
 
 header{
     display: flex;
     align-items: end;
-    background-color: #2A73C7;
+    background-color: #82a5cc;
     height: 100%;
 }
 
@@ -26,11 +29,5 @@ header{
 }
 .main-menu li a{
     text-decoration: none;
-}
-
-@media screen and (max-width:800px){
-    header{
-        
-        position: relative;
-    }
+    color: white;
 }
