--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,17 @@
     box-sizing: border-box;
 }
 
-html{
-    height: 100%;
-}
-body{
-    height: 100vh;
+
+html, body{
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
 }
 
 
 header{
     display: flex;
     align-items: end;
-    background-color: #82a5cc;
+    background-color: #3cc9c9;
     height: 100%;
 }
 
