--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-family: 'Roboto', sans-serif;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
 }
 
 .header-menu{
@@ -77,8 +77,12 @@ button{
 }
 
 @media screen and (max-width:800px) {
+    #header{
+        font-size: 0.85em;
+    }
     .menu{
         display: none;
+        
     }
     .header-menu{
         width: 98%;
@@ -88,7 +92,7 @@ button{
         width: 95%;
     }
     .main-banner{
-        padding: 0.5em;
+        padding: 1em;
         
     }
     .button a{
