--- a/css/index.css
+++ b/css/index.css
@@ -1,82 +1,93 @@
-/* SECCION BANNER PRINCIPAL */
+/***** BANNER *****/
 
 .banner{
-    height: 35em;
-    background-color: antiquewhite;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1em 2em;
-    text-align: center;
-}
-.banner-title{
-    font-size: 2.2em;
-    margin-bottom: 20px;
+    padding: 1em;
+    background-color: rgb(229, 229, 230);
 }
 
-.banner-text{
-    margin-bottom: 40px;
+
+
+.banner__container{
+    width: 90%;
+    margin: 2.5em auto;
+    text-align: center;
 }
-.banner-button{
-    background-color: black;
+
+.banner__title{
+    font-size: 1.9em;
+    text-transform: uppercase;
+    font-weight: 900;
+}
+.banner__text{
+    font-size: 0.9em;
+    text-transform: uppercase;
+    margin: 0.5em 0 2em 0;
+}
+
+.banner__buttons__item{
+    display: inline-flex;
+    justify-content: center;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(238, 238, 238);
+    margin: 5px 1em;
+    text-decoration: none;
+}
+.banner__buttons__item i{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(104, 190, 46);
+    border-right: 1px solid rgb(0, 0, 0);
+    place-items: center;
+    width: 50px;
+    font-size: 1.3em;
     color: white;
 }
-.banner-button:hover{
-    background-color: rgb(68, 67, 67);
-    color: rgb(211, 243, 30);
+.banner__buttons__item span{
+    padding: 0.5em 1.5em;
+    font-size: 0.9em;
 }
 
-/* SECCION SERVICIOS PRINCIPAL */
+/***** SERVICIOS *****/
 
-.services{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3,auto);
-}
-
-.services-box--1{
-    grid-column: 1 / 2;
-    grid-row: 1 / 4;
-    background-color: cadetblue;
-    width: 100%;
-}
-
-.services-box{
-    padding: 1em;
-    margin: auto;
-}
-.services-box-item{
-    background-color: blanchedalmond;
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 1em;
+.services__container{
     text-align: center;
-    margin: 0.5em;
+    padding: 2em;
 }
-.services-box-item span{
-    text-align: center;
+
+.services__title{
+    text-transform: uppercase;
+    color: green;
+}
+.services__text{
+    font-size: 0.88em;
     display: block;
+    padding: 1em 0;
 }
-.services-box-item p{
-    margin: 15px 0;
+.services__button{
+    background-color: rgb(16, 16, 15);
+    color: rgb(252, 252, 252);
+    margin: 1em 0 2.5em 0;
 }
-.services-box-item i{
-    font-size: 3em;
+
+.services__box{
+    display: inline-flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-@media screen and (max-width:800px) {
-    
-    .banner-title{
-        font-size: 1.7em;
-    }
-    .banner-text{
-        font-size: 1em;
-    }
-    
-    .services-box--1{
-        grid-column: 1 / -1;
-    }
-    .services-box{
-        grid-column: 1 / 3;
-    }
+.services__box__item{
+    background-color: rgb(248, 248, 248);
+    margin: 5px;
+    padding: 1em;
+    border-top: 7px solid rgba(25, 143, 12, 0.92);
+    max-width: 380px;
+
+    display: flex;
+    flex-direction: column;
+}
+.services__box__item i{
+    font-size: 5.3em;
+    color: brown;
+}
+.services__box__item span{
+    margin: 10px 0;
 }
