--- a/css/index.css
+++ b/css/index.css
@@ -2,25 +2,22 @@
 
 .banner{
     padding: 1em;
-    background-color: rgb(229, 229, 230);
 }
-
-
 
 .banner__container{
     width: 90%;
-    margin: 2.5em auto;
+    margin: 3em auto;
     text-align: center;
 }
 
 .banner__title{
-    font-size: 1.9em;
+    font-size: 2em;
     text-transform: uppercase;
     font-weight: 900;
 }
 .banner__text{
     font-size: 0.9em;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     margin: 0.5em 0 2em 0;
 }
 
@@ -42,9 +39,14 @@
     font-size: 1.3em;
     color: white;
 }
+
+.banner__buttons__item:nth-child(2) i{
+    background-color: rgb(223, 32, 32);
+}
+
 .banner__buttons__item span{
     padding: 0.5em 1.5em;
-    font-size: 0.9em;
+    font-size: 0.85em;
 }
 
 /***** SERVICIOS *****/
@@ -52,11 +54,22 @@
 .services__container{
     text-align: center;
     padding: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.services__container::before{
+    content: "";
+    border-bottom: 0.0025em solid #d0d0d0;
+    display: block;
+    width: 100%;
+    margin-bottom: 2.5em;
 }
 
 .services__title{
     text-transform: uppercase;
-    color: green;
+    color: rgb(20, 21, 20);
+    font-size: 1.35em;
 }
 .services__text{
     font-size: 0.88em;
@@ -75,19 +88,37 @@
     flex-wrap: wrap;
 }
 .services__box__item{
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(255, 255, 255);
     margin: 5px;
     padding: 1em;
-    border-top: 7px solid rgba(25, 143, 12, 0.92);
-    max-width: 380px;
+    border-top: 7px solid rgba(6, 87, 186, 0.92);
+    max-width: 320px;
 
     display: flex;
     flex-direction: column;
 }
-.services__box__item i{
-    font-size: 5.3em;
-    color: brown;
+.services__box__item img{
+    display: block;
+    object-fit: contain;
+    width: 70%;
+    height: 200px;
+    margin: 0 auto;
 }
 .services__box__item span{
     margin: 10px 0;
+    color: rgb(8, 52, 185);
+    font-weight: 500;
+}
+.services__box__item p{
+    font-size: 0.9em;
+    margin-bottom: 20px;
+}
+
+.services__box__item ul{
+    /* list-style: initial; */
+    margin: 0 30px;
+    font-size: 0.89em;
+    text-align: left;
+    margin-bottom: 1.5em;
+    list-style-position: outside;
 }
